--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.1",
-    "react-is": "^16.13.1"
+    "react-is": "^16.13.1",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
     "vue": "^2.6.12"
